// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hue renders correctly 1`] = `
<DocumentFragment>
  <div
    class="hue-picker "
    style="position: relative; width: 316px; height: 16px;"
  >
    <div
      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 2px; border-radius: 2px;"
    >
      <div
        class="hue-horizontal"
        style="padding: 0px 2px; position: relative; height: 100%; -webkit-border-radius: 2px; border-radius: 2px;"
      >
        <style>
          
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
        </style>
        <div
          style="position: absolute; left: 69.44444444444443%;"
        >
          <div
            style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-9px, -1px); transform: translate(-9px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Hue renders vertically 1`] = `
<DocumentFragment>
  <div
    class="hue-picker "
    style="position: relative; width: 20px; height: 200px;"
  >
    <div
      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 2px; border-radius: 2px;"
    >
      <div
        class="hue-vertical"
        style="padding: 0px 2px; position: relative; height: 100%; -webkit-border-radius: 2px; border-radius: 2px;"
      >
        <style>
          
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
        </style>
        <div
          style="position: absolute; left: 0px; top: 30.55555555555557%;"
        >
          <div
            style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-3px, -9px); transform: translate(-3px, -9px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HuePointer renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-9px, -1px); transform: translate(-9px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
  />
</DocumentFragment>
`;
